k8s-files/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose --file m210_fullstack/docker-compose4helm.yaml convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backend
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose --file m210_fullstack/docker-compose4helm.yaml convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: backend
    spec:
      containers:
        - env:
            - name: MYSQL_HOST
              value: mysql-db
          image: greenorca/m210-backend:1.0
          name: backend
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
