k8s-files/caddy-proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose --file m210_fullstack/docker-compose4helm.yaml convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: caddy-proxy
  name: caddy-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: caddy-proxy
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose --file m210_fullstack/docker-compose4helm.yaml convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: caddy-proxy
    spec:
      containers:
        - image: caddy:latest
          name: caddy-proxy
          ports:
            - containerPort: 80
              protocol: TCP
            - containerPort: 443
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/caddy/Caddyfile
              name: caddy-proxy-cm0
              subPath: Caddyfile
            - mountPath: /data
              name: caddy-data
            - mountPath: /config
              name: caddy-config
      restartPolicy: Always
      volumes:
        - configMap:
            items:
              - key: Caddyfile
                path: Caddyfile
            name: caddy-proxy-cm0
          name: caddy-proxy-cm0
        - name: caddy-data
          persistentVolumeClaim:
            claimName: caddy-data
        - name: caddy-config
          persistentVolumeClaim:
            claimName: caddy-config
