k8s-files/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose --file m210_fullstack/docker-compose4helm.yaml convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose --file m210_fullstack/docker-compose4helm.yaml convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: frontend
    spec:
      containers:
        - image: greenorca/m210-frontend:1.0
          name: frontend
          ports:
            - containerPort: 80
              protocol: TCP
      restartPolicy: Always
