k8s-files/mysql-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose --file m210_fullstack/docker-compose4helm.yaml convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: mysql-db
  name: mysql-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mysql-db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose --file m210_fullstack/docker-compose4helm.yaml convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: mysql-db
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              value: demo
            - name: MYSQL_PASSWORD
              value: demo
            - name: MYSQL_ROOT_PASSWORD
              value: demo
            - name: MYSQL_USER
              value: demo
          image: mysql:8.0
          name: mysql-db
          ports:
            - containerPort: 3306
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: demo-data
      restartPolicy: Always
      volumes:
        - name: demo-data
          persistentVolumeClaim:
            claimName: demo-data
