k8s-files/caddy-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose --file m210_fullstack/docker-compose4helm.yaml convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: caddy-proxy
  name: caddy-proxy
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
    - name: "443"
      port: 443
      targetPort: 443
  selector:
    io.kompose.service: caddy-proxy
