k8s-files/mysql-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose --file m210_fullstack/docker-compose4helm.yaml convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: mysql-db
  name: mysql-db
spec:
  ports:
    - name: "3306"
      port: 3306
      targetPort: 3306
  selector:
    io.kompose.service: mysql-db
